app/src/main/java/com/example/taskyy/domain/error/Error.kt
package com.example.taskyy.domain.error

sealed interface Error {
}